--- a/MathFight/Assembly-CSharp.csproj
+++ b/MathFight/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\fightercontrols.cs" />
+     <Compile Include="Assets\lessonremover.cs" />
      <Compile Include="Assets\problemGenerator.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
