wrote hp script

--- a/MathFight/Assembly-CSharp-vs.csproj
+++ b/MathFight/Assembly-CSharp-vs.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\fightercontrols.cs" />
+     <Compile Include="Assets\hp.cs" />
      <Compile Include="Assets\lessonremover.cs" />
      <Compile Include="Assets\problemGenerator.cs" />
  <Reference Include="UnityEngine.UI">
