--- a/MathFight/Assembly-CSharp.csproj
+++ b/MathFight/Assembly-CSharp.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Particle.cs" />
      <Compile Include="Assets\fightercontrols.cs" />
      <Compile Include="Assets\hp.cs" />
      <Compile Include="Assets\lessonremover.cs" />
