--- a/MathFight/Assembly-CSharp.csproj
+++ b/MathFight/Assembly-CSharp.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\Particle.cs" />
      <Compile Include="Assets\Scripts\ParticleS.cs" />
      <Compile Include="Assets\Scripts\Sangbag_collision.cs" />
+     <Compile Include="Assets\Scripts\Steveanimator.cs" />
      <Compile Include="Assets\Scripts\UIManagerScript.cs" />
      <Compile Include="Assets\Scripts\batmananimation.cs" />
      <Compile Include="Assets\Scripts\hp.cs" />
